Bug with local alignments rendering fixed

--- a/frontend/src/pages/alignment/styles.scss
+++ b/frontend/src/pages/alignment/styles.scss
@@ -54,7 +54,8 @@ textarea {
 
 #alignmentPlot {
     flex: 3;
-    width: 100%;
+    max-width: 100%;
+    display: inline-block;
     margin: 50px 20px;
 
     .dygraph-legend {
